# first_bot

./: .env_example  pyproject.toml
for_learning.py/: bot.py  bot2.py  buttons.py  flter.py  gpt_stuff.py  guess_number.py  numbers_finder.py  test.py
tg_bot/: bot.py  logger.py  main.py
tg_bot/config_data/: config.py
tg_bot/enums/: elements.py
tg_bot/handlers/: basic_handlers.py  game_handler.py
tg_bot/keyboards/: game_keyboard.py  start_keyboard.py
tg_bot/lexicon/: lexicon_ru.py
tg_bot/service/: define_game_result.py
