[tool.poetry]
name = "first-tg-bot"
version = "0.1.0"
description = ""
authors = ["Shakhboz Usmanov <shakhbozusmanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
requests = "^2.32.3"
environs = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
